--- a/so(3)_intermedio.ipynb
+++ b/so(3)_intermedio.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "# **Representación Fundamental del ÁLgebra de Lorentz $so(1,3)$**\n",
         "\n",
-        "## Prof. Mario I. Caicedo. Universidad SImónBolívar. \n",
+        "## Prof. Mario I. Caicedo. Universidad Simón Bolívar. \n",
         "##Caracas. Venezuela"
       ]
     },
@@ -80,7 +80,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
         "  C=np.dot(A,B)-np.dot(B,A)\n",
         "  return C"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "J02 = 1.j*np.matrix(\"0.,0.,1.,0.;0.,0.,0.,0.;1.,0.,0.,0.;0.,0.,0.,0.\")\n",
         "J03 = 1.j*np.matrix(\"0.,0.,0.,1.;0.,0.,0.,0.;0.,0.,0.,0.;1.,0.,0.,0.\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "K2=J02\n",
         "K3=J03"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +324,7 @@
         "J23 = 1.j*np.matrix(\"0.,0.,0.,0.;0.,0.,0.,0.;0.,0.,0.,-1.;0.,0.,1.,0.\")\n",
         "J31 = 1.j*np.matrix(\"0.,0.,0.,0.;0.,0.,0.,1.;0.,0.,0.,0.;0.,-1.,0.,0.\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -337,7 +337,7 @@
         "J2=J31\n",
         "J3=J12"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,7 +356,7 @@
         "print()\n",
         "print('J3\\n',J3) # S2"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +439,7 @@
         "X2=conmutador(J3,J1)\n",
         "X1=conmutador(J2,J3)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -458,7 +458,7 @@
         "#\n",
         "print('[J2,J3]-iJ1\\n',X1-1.j*J1,'\\n')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +507,7 @@
         "Y2=conmutador(K3,K1)\n",
         "Y1=conmutador(K2,K3) "
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -526,7 +526,7 @@
         "#\n",
         "print('[K2,K3]+i12\\n',Y1+1.j*J1)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +574,7 @@
         "W2=conmutador(J3,K1)\n",
         "W1=conmutador(J2,K3)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -593,7 +593,7 @@
         "#\n",
         "print('[J2,K3]-iK1\\n',W1-1.j*K1)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,7 +660,7 @@
         "N2D=(J2-1.j*K2)/2\n",
         "N3D=(J3-1.j*K3)/2"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -673,7 +673,7 @@
         "Z2=conmutador(N3,N1)\n",
         "Z1=conmutador(N2,N3)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -686,7 +686,7 @@
         "Z2D=conmutador(N3D,N1D)\n",
         "Z1D=conmutador(N2D,N3D)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -699,7 +699,7 @@
         "Z2M=conmutador(N3,N1D)\n",
         "Z1M=conmutador(N2,N3D)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -718,7 +718,7 @@
         "#\n",
         "print('[N2,N3]-iN1\\n',Z1-1.j*N1)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,7 +761,7 @@
         "print()\n",
         "print('[N2D,N3D]-iN1D\\n',Z1D-1.j*N1D)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,7 +815,7 @@
         "A=N1*N1+N2*N2+N3*N3\n",
         "B=N1D*N1D+N2D*N2D+N3D*N3D"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -832,7 +832,7 @@
         "\n",
         "print('B\\n',B)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
